# ModernCppStarter

./: CMakeLists.txt
all/: CMakeLists.txt
app/: CMakeLists.txt
app/source/: main.cpp
include/srtools/: srtools.h
source/: srtools.cpp
standalone/: CMakeLists.txt
test/: CMakeLists.txt
test/source/: greeter.cpp
